--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <i class="fas fa-box-open fa-fw"></i> Productos
           </a>
           <ul class="dropdown-menu" aria-labelledby="productosDropdown">
-            <li><a class="dropdown-item" href="#poleras"><i class="fas fa-tshirt"></i> Poleras Sublimadas</a></li>
+            <li><a class="dropdown-item" href="poleras.html"><i class="fas fa-tshirt"></i> Poleras Sublimadas</a></li>
             <li><a class="dropdown-item" href="#banners"><i class="fas fa-image"></i> Banners</a></li>
             <li><a class="dropdown-item" href="#trupan"><i class="fas fa-square"></i> Trupán Adhesivo</a></li>
             <li><a class="dropdown-item" href="#stickers"><i class="fas fa-sticky-note"></i> Stickers</a></li>
