Primera subida de mi página web

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mia Design</title>
+    <link rel="icon" type="image/png" href="img/logo/logo.svg">
   <script src="js/script.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
@@ -221,7 +222,8 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-magenta shadow-sm sticky-top">
   <div class="container">
-    <a class="navbar-brand" href="#"><i class="fas fa-palette"></i>Mia Design</a>
+    <a class="navbar-brand" href="#"><img src="img/logo/logo.svg" alt="Logo Mia Design" style="height: 40px; width: auto;"></i>Mia Design</a>
+    
     <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-bars"></i>
     </button>
@@ -229,7 +231,7 @@
       <ul class="navbar-nav ms-auto">
 
         <li class="nav-item">
-          <a class="nav-link active" href="#inicio"><i class="fas fa-home fa-fw"></i> Inicio</a>
+          <a class="nav-link active" href="index.html"><i class="fas fa-home fa-fw"></i> Inicio</a>
         </li>
 
         <!-- Dropdown Productos -->
@@ -400,7 +402,55 @@
 
 
 
+<div class="container">
+  <div class="magenta-bg">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <a href="poleras.html" style="text-decoration: none; color: inherit;">
+        <div class="card h-100">
+          <div class="shine-effect">
+            <img src="img/madre/diamadre.jpg" class="card-img-top" alt="Skyscrapers"/>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">DIA DE LA MADRE</h5>
+            <p class="card-text">
+              👕🧢🧸🥤 Poleras, gorras, almohadas y tomatodos sublimados con sus personajes favoritos
+            🌈 ¡Coloridos, divertidos y personalizados! 
+            🚚 Envíos a nivel nacional
+            </p>
+          </div>
+          <div class="card-footer">
+            <small>Última actualización hace 1 minutos</small>
+          </div>
+        </div>
+         </a>
+      </div>
 
+   
+      <div class="col">
+  <a href="polerasmall.html" style="text-decoration: none; color: inherit;">
+    <div class="card h-100">
+      <div class="shine-effect">
+        <img src="img/madre/poleraschicas.jpg" class="card-img-top" alt="Palm Springs Road"/>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">POLERA PARA NIÑOS</h5>
+        <p class="card-text">
+        ¡Combo perfecto para los más peques!
+👕🧢 Polera + Gorra personalizada con su personaje favorito
+✨ ¡Listos para lucirse en su día especial! ✨
+        </p>
+      </div>
+      <div class="card-footer">
+        <small>Última actualización hace 3 minutoso</small>
+      </div>
+    </div>
+  </a>
+</div>
+
+    </div>
+  </div>
+</div>
 
 
 
