--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           <!-- Tarjeta 3 -->
           <div class="col-lg-6 mb-4 mb-lg-0 hero-content">
             <!-- Tarjeta rediseñada para versión gratuita de MDBootstrap -->  
-         <a href="poleras.html?filter=tazas" style="text-decoration: none; color: inherit;">
+         <a href="polerasmall.html" style="text-decoration: none; color: inherit;">
         <div class="card h-100">
           <div class="shine-effect">
             <img src="img/madre/inicio/poleraschicas.jpg" class="card-img-top" alt="Skyscrapers"/>
