--- a/poleras.html
+++ b/poleras.html
@@ -323,7 +323,7 @@
       <div class="card product-card" data-category="poleras">
         <div class="card-img-wrapper">
           
-          <img src="img/madre/MADRE18.jpg" class="card-img-top" alt="Polera Modelo Magenta">
+          <img src="img/madre/madre18.jpg" class="card-img-top" alt="Polera Modelo Magenta">
         </div>
         <div class="card-body">
           <p class="">Una polera que refleja la fortaleza y amor de mamá, con la mejor calidad..</p>
