--- a/contactos.html
+++ b/contactos.html
@@ -279,7 +279,7 @@
               <i class="fas fa-phone-alt"></i>
             </div>
             <h5 class="contact-info-title">Teléfono</h5>
-            <p class="mb-0">+123 456 7890</p>
+            <p class="mb-0">+591 65321645 </p>
             <p>Lunes a Viernes: 9am - 7pm</p>
           </div>
           
