--- a/index.html
+++ b/index.html
@@ -525,10 +525,10 @@
           <p class="lead mb-4 fade-in-up delay-1">Diseños creativos y personalizados para hacer brillar tu marca en cualquier espacio.</p>
           <div class="d-flex flex-wrap gap-3 fade-in-up delay-2">
             <!-- Botones corregidos para mantener color en hover -->
-            <a href="#contacto" class="btn btn-mia">
+            <a href="contactos.html" class="btn btn-mia">
               <i class="fas fa-envelope me-2"></i>Contáctanos
             </a>
-            <a href="#galeria" class="btn btn-outline-mia">
+            <a href="galeria.html" class="btn btn-outline-mia">
               <i class="fas fa-images me-2"></i>Ver Trabajos
             </a>
           </div>
